@@ -17,9 +17,9 @@
 		<email>alec@alec.pl</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-06-21</date>
+	<date>2012-07-24</date>
 	<version>
-		<release>5.1</release>
+		<release>5.2</release>
 		<api>5.0</api>
 	</version>
 	<stability>
