@@ -1,4 +1,4 @@
-require ["envelope","variables","enotify"];
+require ["envelope","variables","notify"];
 # rule:[from]
 if envelope :all :matches "from" "*"
 {
@@ -13,6 +13,5 @@ if header :matches "Subject" "*"
 if address :all :matches "from" "*"
 {
 	set "from_addr" "${1}";
-	notify :message "${from_addr}${env_from}: ${subject}" "mailto:alm@example.com";
+	notify :message "${from_addr}${env_from}: ${subject}" :method "sms:1234567890";
 }
-
